# rust-tonic-and-vue3-protobuf-ts-grpc-web-scaffold

./: readme.md
frontend/: .eslintrc.cjs  .gitignore  package-lock.json  package.json  vite.config.ts
frontend/scripts/: build-protos.sh
frontend/src/: App.vue
frontend/src/assets/: base.css  main.css
frontend/src/protos/: voting.client.ts  voting.ts
frontend/src/views/: HomeView.vue
protos/: voting.proto
server/: .env.example  .gitignore  Cargo.toml  build.rs
server/_protos/: voting.proto
server/entity/: Cargo.toml
server/entity/src/: mod.rs  prelude.rs  vote.rs
server/migration/: Cargo.toml
server/migration/src/: m20220101_000001_create_table.rs
server/src/: main.rs  tls.rs
server/src/protos/: voting.rs
