[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.6"
entity = { path = "./entity" }
migration = { path = "./migration" }
prost = "0.11.8"
rcgen = "0.10.0"
rustls = "0.20.8"
rustls-native-certs = "0.6.2"
sea-orm = { version = "^0", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
serde = "1.0.152"
serde-transcode = "1.1.1"
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "fs"] }
tonic = { version = "0.8.3", features = ["tls", "transport", "tls-roots"] }
tonic-web = "0.5"
tower-http = { version = "0.4.0", features = ["cors"] }
tracing-subscriber = "0.3"

[build-dependencies]
serde = "1.0.152"
tonic-build = "0.8.4"
